themistokles/ge/base/ktesias/cnp.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-all-elasticsearch-access-ktesias
spec:
  endpointSelector:
    matchLabels:
      elasticsearch.k8s.elastic.co/cluster-name: aristoteles
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: ktesias
      toPorts:
        - ports:
            - port: "9200"
              protocol: TCP
